# Latite

./: .clang-format  CMakeLists.txt  CMakePresets.json  CppProperties.json  README.md  Sources.cmake  resource.h
libs/api/: CMakeLists.txt
libs/api/include/config/: Config.h  ConfigManager.h
libs/api/include/eventing/: Listenable.h
libs/api/include/feature/: Feature.h
libs/api/include/feature/command/: CommandManager.h
libs/api/include/feature/setting/: Setting.h
libs/api/include/scanner/: Scanner.h
libs/api/src/config/: Config.cpp
libs/api/src/feature/setting/: Setting.cpp
libs/api/src/scanner/: legacyScanner.cpp
libs/client/: CMakeLists.txt
libs/client/config/: ConfigManager.cpp
libs/client/event/impl/: LeaveGameEvent.h  RendererInitEvent.h
libs/client/feature/command/: CommandManager.cpp
libs/client/feature/module/impl/hud/: ArmorHUD.h  HealthWarning.h  MovableCoordinates.cpp  MovablePaperdoll.h  MovableScoreboard.cpp
libs/client/feature/module/impl/misc/: BlockGame.h  Nickname.cpp
libs/client/feature/module/impl/visual/: BlockOutline.cpp  HurtColor.h  NoHurtCam.h
libs/client/include/event/: Events.h
libs/client/include/event/impl/: AfterEntityRenderEvent.h  AttackEvent.h  AveragePingEvent.h  BobHurtEvent.h  BobMovementEvent.h  ChatEvent.h  ChatMessageEvent.h  ClickEvent.h  FocusLostEvent.h  GammaEvent.h  HideHandEvent.h  KeyUpdateEvent.h  PerspectiveEvent.h  RenderGameEvent.h  RenderLayerEvent.h  RenderOverlayEvent.h  SendPacketEvent.h  SensitivityEvent.h  UpdateEvent.h  UpdatePlayerCameraEvent.h  WeatherEvent.h
libs/client/include/feature/command/: Command.h
libs/client/include/feature/command/impl/: EjectCommand.h  ScriptCommand.h  SetPrefixCommand.h  SignCommand.h  ToggleCommand.h
libs/client/include/feature/command/script/: JsCommand.h
libs/client/include/hook/: Hook.h  Hooks.h
libs/client/include/hook/impl/: LevelRendererHooks.h  MinecraftGameHooks.h  PlayerHooks.h  ScreenViewHooks.h
libs/client/include/input/: Keyboard.h
libs/client/include/localization/: LocalizeData.h
libs/client/include/misc/: ClientMessageQueue.h  Notifications.h
libs/client/include/screen/: ScreenManager.h
libs/client/include/screen/impl/: HUDEditor.h
libs/client/include/screen/script/: JsScreen.h
libs/client/include/script/: JsPlugin.h  JsScript.h
libs/client/include/script/class/: JsClass.h  JsWrapperClass.h
libs/client/include/script/class/impl/: JsColor.h  JsNativeModule.h  JsVec3.h
libs/client/include/script/class/impl/game/: JsBlock.h  JsEntityClass.h  JsItem.h  JsItemStack.h  JsPlayerClass.h
libs/client/include/script/event/: ScriptListener.h
libs/client/include/script/interop/classes/: JsEntity.h
libs/client/include/script/js/: latiteapi.js
libs/client/include/script/lib/: JsLibrary.h
libs/client/include/script/objects/: ClientScriptingObject.h  D2DScriptingObject.h  Graphics3DScriptingObject.h  OSScriptingObject.h
libs/client/localization/: LocalizeString.h
libs/client/render/asset/: Asset.cpp
libs/client/script/class/impl/: JsVec2.h
libs/client/src/event/: Eventing.cpp
libs/client/src/feature/command/impl/: EjectCommand.cpp  HelpCommand.cpp  ToggleCommand.cpp
libs/client/src/feature/command/script/: JsCommand.cpp
libs/client/src/hook/impl/: DXHooks.cpp  GeneralHooks.cpp  LevelRendererHooks.cpp  RenderControllerHooks.cpp
libs/client/src/localization/: LocalizeData.cpp  LocalizeString.cpp
libs/client/src/misc/: ClientMessageQueue.cpp  Notifications.cpp
libs/client/src/render/: Renderer.cpp
libs/client/src/screen/: Screen.cpp
libs/client/src/screen/script/: JsScreen.cpp
libs/client/src/script/: JsScript.cpp  PluginManager.cpp
libs/client/src/script/class/impl/: JsCommandClass.cpp  JsModuleClass.cpp  JsSettingClass.cpp
libs/client/src/script/event/: ScriptListener.cpp
libs/client/src/script/feature/: JsEvented.cpp
libs/client/src/script/interop/classes/: JsEntity.cpp  JsTexture.cpp
libs/client/src/script/objects/: ClientScriptingObject.cpp  Graphics3DScriptingObject.cpp  OSScriptingObject.cpp
libs/client/src/ui/: TextBox.cpp
libs/sdk/: CMakeLists.txt
libs/sdk/common/client/game/: Options.cpp
libs/sdk/common/client/renderer/game/: BaseActorRenderContext.h
libs/sdk/common/network/packet/: TextPacket.cpp
libs/sdk/common/util/: BasicPrintStream.h  MolangVariable.h
libs/sdk/include/: String.h  Util.h  Version.h
libs/sdk/include/common/client/game/: ClientInstance.h  FontRepository.h  Option.h  Options.h
libs/sdk/include/common/client/gui/: GuiData.h  ScreenView.h
libs/sdk/include/common/client/player/: LocalPlayer.h
libs/sdk/include/common/client/renderer/: HudPlayerRenderer.h  TexturePtr.h
libs/sdk/include/common/client/util/: JpegCommentWriter.h
libs/sdk/include/common/entity/: EntityContext.h
libs/sdk/include/common/entity/component/: ActorDataFlagComponent.h  ActorEquipmentComponent.h  AttributesComponent.h  RuntimeIDComponent.h
libs/sdk/include/common/network/: Packet.h  PacketSender.h  RakNetConnector.h
libs/sdk/include/common/network/packet/: CommandRequestPacket.h  ModalFormRequestPacket.h  SetTitlePacket.h  TextPacket.h
libs/sdk/include/common/server/: ServerInstance.h
libs/sdk/include/common/util/: BasicDataOutput.h  MolangVariableMap.h
libs/sdk/include/common/world/: ItemStack.h  ItemStackBase.h  Timer.h
libs/sdk/include/common/world/level/: Dimension.h  Level.h  LevelData.h
libs/sdk/include/misc/: ClickMap.h
libs/sdk/include/signature/: storage_1_19_51.h  storage_1_20_30.h  storage_1_20_40.h
libs/sdk/src/common/client/game/: ClientInstance.cpp  MinecraftGame.cpp
libs/sdk/src/common/client/input/: RemappingLayout.cpp
libs/sdk/src/common/client/renderer/: MeshUtils.cpp  Tessellator.cpp
libs/sdk/src/common/network/packet/: SetScorePacket.cpp
libs/sdk/src/common/world/actor/: Actor.cpp
libs/sdk/src/common/world/level/: Level.cpp  LevelData.cpp
libs/util/: CMakeLists.txt
libs/util/include/: DxContext.h  DxUtil.h  FNV32.h  Logger.h
libs/util/src/: DrawUtil3D.cpp  DxUtil.cpp  Logger.cpp  Util.cpp
src/: CMakeLists.txt  pch.h  (+1 more)
(+286 files in other folders)
