add_library(Latite.client STATIC
	src/config/ConfigManager.cpp
	src/event/Eventing.cpp
	src/feature/command/impl/ConfigCommand.cpp
	src/feature/command/impl/EjectCommand.cpp
	src/feature/command/impl/HelpCommand.cpp
	src/feature/command/impl/ScriptCommand.cpp
	src/feature/command/impl/SetPrefixCommand.cpp
	src/feature/command/impl/SignCommand.cpp
	src/feature/command/impl/TestCommand.cpp
	src/feature/command/impl/ToggleCommand.cpp
	src/feature/command/script/JsCommand.cpp
	src/feature/command/Command.cpp
	src/feature/command/CommandManager.cpp
	src/feature/module/impl/game/AutoGG.cpp
	src/feature/module/impl/game/BehindYou.cpp
	src/feature/module/impl/game/CinematicCamera.cpp
	src/feature/module/impl/game/DynamicLight.cpp
	src/feature/module/impl/game/EnvironmentChanger.cpp
	src/feature/module/impl/game/Freelook.cpp
	src/feature/module/impl/game/TextHotkey.cpp
	src/feature/module/impl/game/ThirdPersonNametag.cpp
	src/feature/module/impl/game/ToggleSprintSneak.cpp
	src/feature/module/impl/game/Waypoints.cpp
	src/feature/module/impl/game/Zoom.cpp
	src/feature/module/impl/hud/ArmorHUD.cpp
	src/feature/module/impl/hud/BowIndicator.cpp
	src/feature/module/impl/hud/BreakIndicator.cpp
	src/feature/module/impl/hud/Chat.cpp
	src/feature/module/impl/hud/Clock.cpp
	src/feature/module/impl/hud/ComboCounter.cpp
	src/feature/module/impl/hud/CPSCounter.cpp
	src/feature/module/impl/hud/CustomCoordinates.cpp
	src/feature/module/impl/hud/FPSCounter.cpp
	src/feature/module/impl/hud/FrameTimeDisplay.cpp
	src/feature/module/impl/hud/GuiscaleChanger.cpp
	src/feature/module/impl/hud/HealthWarning.cpp
	src/feature/module/impl/hud/ItemCounter.cpp
	src/feature/module/impl/hud/Keystrokes.cpp
	src/feature/module/impl/hud/MovableBossbar.cpp
	src/feature/module/impl/hud/MovableCoordinates.cpp
	src/feature/module/impl/hud/MovablePaperdoll.cpp
	src/feature/module/impl/hud/MovableScoreboard.cpp
	src/feature/module/impl/hud/PingDisplay.cpp
	src/feature/module/impl/hud/ReachDisplay.cpp
	src/feature/module/impl/hud/ServerDisplay.cpp
	src/feature/module/impl/hud/SpeedDisplay.cpp
	src/feature/module/impl/hud/TabList.cpp
	src/feature/module/impl/misc/BlockGame.cpp
	src/feature/module/impl/misc/CommandShortcuts.cpp
	src/feature/module/impl/misc/DebugInfo.cpp
	src/feature/module/impl/misc/ItemTweaks.cpp
	src/feature/module/impl/misc/JavaDrop.cpp
	src/feature/module/impl/misc/Nickname.cpp
	src/feature/module/impl/misc/Screenshot.cpp
	src/feature/module/impl/misc/TestModule.cpp
	src/feature/module/impl/visual/BlockOutline.cpp
	src/feature/module/impl/visual/ChunkBorders.cpp
	src/feature/module/impl/visual/Fullbright.cpp
	src/feature/module/impl/visual/Hitboxes.cpp
	src/feature/module/impl/visual/HurtColor.cpp
	src/feature/module/impl/visual/MotionBlur.cpp
	src/feature/module/impl/visual/NoHurtCam.cpp
	src/feature/module/script/JsHudModule.cpp
	src/feature/module/script/JsModule.cpp
	src/feature/module/script/JsTextModule.cpp
	src/feature/module/HUDModule.cpp
	src/feature/module/Module.cpp
	src/feature/module/ModuleManager.cpp
	src/feature/module/TextModule.cpp
	src/hook/impl/DXHooks.cpp
	src/hook/impl/GeneralHooks.cpp
	src/hook/impl/LevelRendererHooks.cpp
	src/hook/impl/MinecraftGameHooks.cpp
	src/hook/impl/OptionHooks.cpp
	src/hook/impl/PacketHooks.cpp
	src/hook/impl/PlayerHooks.cpp
	src/hook/impl/RenderControllerHooks.cpp
	src/hook/impl/ScreenViewHooks.cpp
	src/hook/Hook.cpp
	src/hook/Hooks.cpp
	src/input/Keyboard.cpp
	src/localization/LocalizeData.cpp
	src/localization/LocalizeString.cpp
	src/misc/ClientMessageQueue.cpp
	src/misc/Notifications.cpp
	src/misc/Timings.cpp
	src/render/asset/Asset.cpp
	src/render/Assets.cpp
	src/render/Renderer.cpp
	src/screen/impl/ClickGUI.cpp
	src/screen/impl/HUDEditor.cpp
	src/screen/script/JsScreen.cpp
	src/screen/ScreenManager.cpp
	src/script/class/impl/game/JsEntityClass.cpp
	src/script/class/impl/game/JsLocalPlayerClass.cpp
	src/script/class/impl/game/JsPlayerClass.cpp
	src/script/class/impl/JsCommandClass.cpp
	src/script/class/impl/JsHudModuleClass.cpp
	src/script/class/impl/JsModuleClass.cpp
	src/script/class/impl/JsSettingClass.cpp
	src/script/class/impl/JsTextModuleClass.cpp
	src/script/class/impl/JsWorkerThread.cpp
	src/script/event/ScriptListener.cpp
	src/script/feature/JsEvented.cpp
	src/script/interop/classes/JsEntity.cpp
	src/script/interop/classes/JsTexture.cpp
	src/script/lib/libraries/Clipboard.cpp
	src/script/lib/libraries/Filesystem.cpp
	src/script/lib/libraries/Network.cpp
	src/script/lib/JsLibrary.cpp
	src/script/objects/ClientScriptingObject.cpp
	src/script/objects/D2DScriptingObject.cpp
	src/script/objects/GameScriptingObject.cpp
	src/script/objects/Graphics3DScriptingObject.cpp
	src/script/objects/OptionsScriptingObject.cpp
	src/script/objects/OSScriptingObject.cpp
	src/script/JsPlugin.cpp
	src/script/JsScript.cpp
	src/script/PluginManager.cpp
	src/script/ScriptingObject.cpp
	src/ui/TextBox.cpp
	src/Latite.cpp

	include/config/ConfigManager.h
	include/event/impl/AfterEntityRenderEvent.h
	include/event/impl/AfterMoveEvent.h
	include/event/impl/AppSuspendedEvent.h
	include/event/impl/AttackEvent.h
	include/event/impl/AveragePingEvent.h
	include/event/impl/BeforeMoveEvent.h
	include/event/impl/BobHurtEvent.h
	include/event/impl/BobMovementEvent.h
	include/event/impl/CharEvent.h
	include/event/impl/ChatEvent.h
	include/event/impl/ChatMessageEvent.h
	include/event/impl/CinematicCameraEvent.h
	include/event/impl/ClickEvent.h
	include/event/impl/ClientTextEvent.h
	include/event/impl/DrawHUDModulesEvent.h
	include/event/impl/FocusLostEvent.h
	include/event/impl/FogColorEvent.h
	include/event/impl/GammaEvent.h
	include/event/impl/GetTimeEvent.h
	include/event/impl/HideHandEvent.h
	include/event/impl/KeyUpdateEvent.h
	include/event/impl/LatiteClientMessageEvent.h
	include/event/impl/LeaveGameEvent.h
	include/event/impl/OutlineSelectionEvent.h
	include/event/impl/OverlayColorEvent.h
	include/event/impl/PacketReceiveEvent.h
	include/event/impl/PerspectiveEvent.h
	include/event/impl/RendererCleanupEvent.h
	include/event/impl/RendererInitEvent.h
	include/event/impl/RenderGameEvent.h
	include/event/impl/RenderGuiItemEvent.h
	include/event/impl/RenderLayerEvent.h
	include/event/impl/RenderLevelEvent.h
	include/event/impl/RenderOverlayEvent.h
	include/event/impl/SendPacketEvent.h
	include/event/impl/SensitivityEvent.h
	include/event/impl/TickEvent.h
	include/event/impl/UpdateEvent.h
	include/event/impl/UpdatePlayerCameraEvent.h
	include/event/impl/WeatherEvent.h
	include/event/Eventing.h
	include/event/Events.h
	include/feature/command/impl/ConfigCommand.h
	include/feature/command/impl/EjectCommand.h
	include/feature/command/impl/HelpCommand.h
	include/feature/command/impl/ScriptCommand.h
	include/feature/command/impl/SetPrefixCommand.h
	include/feature/command/impl/SignCommand.h
	include/feature/command/impl/TestCommand.h
	include/feature/command/impl/ToggleCommand.h
	include/feature/command/impl/WaypointCommand.h
	include/feature/command/script/JsCommand.h
	include/feature/command/Command.h
	include/feature/command/CommandManager.h
	include/feature/module/impl/game/AutoGG.h
	include/feature/module/impl/game/BehindYou.h
	include/feature/module/impl/game/CinematicCamera.h
	include/feature/module/impl/game/DynamicLight.h
	include/feature/module/impl/game/EnvironmentChanger.h
	include/feature/module/impl/game/Freelook.h
	include/feature/module/impl/game/TextHotkey.h
	include/feature/module/impl/game/ThirdPersonNametag.h
	include/feature/module/impl/game/ToggleSprintSneak.h
	include/feature/module/impl/game/Waypoints.h
	include/feature/module/impl/game/Zoom.h
	include/feature/module/impl/hud/ArmorHUD.h
	include/feature/module/impl/hud/BowIndicator.h
	include/feature/module/impl/hud/BreakIndicator.h
	include/feature/module/impl/hud/Chat.h
	include/feature/module/impl/hud/Clock.h
	include/feature/module/impl/hud/ComboCounter.h
	include/feature/module/impl/hud/CPSCounter.h
	include/feature/module/impl/hud/CustomCoordinates.h
	include/feature/module/impl/hud/FPSCounter.h
	include/feature/module/impl/hud/FrameTimeDisplay.h
	include/feature/module/impl/hud/GuiscaleChanger.h
	include/feature/module/impl/hud/HealthWarning.h
	include/feature/module/impl/hud/ItemCounter.h
	include/feature/module/impl/hud/Keystrokes.h
	include/feature/module/impl/hud/Minimap.h
	include/feature/module/impl/hud/MovableBossbar.h
	include/feature/module/impl/hud/MovableCoordinates.h
	include/feature/module/impl/hud/MovablePaperdoll.h
	include/feature/module/impl/hud/MovableScoreboard.h
	include/feature/module/impl/hud/PingDisplay.h
	include/feature/module/impl/hud/ReachDisplay.h
	include/feature/module/impl/hud/ServerDisplay.h
	include/feature/module/impl/hud/SpeedDisplay.h
	include/feature/module/impl/hud/TabList.h
	include/feature/module/impl/misc/BlockGame.h
	include/feature/module/impl/misc/CommandShortcuts.h
	include/feature/module/impl/misc/DebugInfo.h
	include/feature/module/impl/misc/ItemTweaks.h
	include/feature/module/impl/misc/JavaDrop.h
	include/feature/module/impl/misc/Nickname.h
	include/feature/module/impl/misc/Screenshot.h
	include/feature/module/impl/misc/TestModule.h
	include/feature/module/impl/visual/BlockOutline.h
	include/feature/module/impl/visual/ChunkBorders.h
	include/feature/module/impl/visual/Fullbright.h
	include/feature/module/impl/visual/Hitboxes.h
	include/feature/module/impl/visual/HurtColor.h
	include/feature/module/impl/visual/MotionBlur.h
	include/feature/module/impl/visual/NoHurtCam.h
	include/feature/module/script/JsHudModule.h
	include/feature/module/script/JsModule.h
	include/feature/module/script/JsTextModule.h
	include/feature/module/HUDModule.h
	include/feature/module/Module.h
	include/feature/module/ModuleManager.h
	include/feature/module/TextModule.h
	include/feature/setting/script/JsSetting.h
	include/hook/impl/DXHooks.h
	include/hook/impl/GeneralHooks.h
	include/hook/impl/LevelRendererHooks.h
	include/hook/impl/MinecraftGameHooks.h
	include/hook/impl/OptionHooks.h
	include/hook/impl/PacketHooks.h
	include/hook/impl/PlayerHooks.h
	include/hook/impl/RenderControllerHooks.h
	include/hook/impl/ScreenViewHooks.h
	include/hook/Hook.h
	include/hook/Hooks.h
	include/input/Keyboard.h
	include/localization/LocalizeData.h
	include/localization/LocalizeString.h
	include/misc/ClientMessageQueue.h
	include/misc/Notifications.h
	include/misc/Timings.h
	include/render/asset/Asset.h
	include/render/Assets.h
	include/render/Renderer.h
	include/screen/impl/ClickGUI.h
	include/screen/impl/HUDEditor.h
	include/screen/script/JsScreen.h
	include/screen/Screen.h
	include/screen/ScreenManager.h
	include/script/class/impl/game/JsBlock.h
	include/script/class/impl/game/JsEntityClass.h
	include/script/class/impl/game/JsInventory.h
	include/script/class/impl/game/JsItem.h
	include/script/class/impl/game/JsItemStack.h
	include/script/class/impl/game/JsLocalPlayerClass.h
	include/script/class/impl/game/JsPlayerClass.h
	include/script/class/impl/JsColor.h
	include/script/class/impl/JsCommandClass.h
	include/script/class/impl/JsHudModuleClass.h
	include/script/class/impl/JsModuleClass.h
	include/script/class/impl/JsNativeModule.h
	include/script/class/impl/JsRect.h
	include/script/class/impl/JsScreenClass.h
	include/script/class/impl/JsSettingClass.h
	include/script/class/impl/JsTextModuleClass.h
	include/script/class/impl/JsTextureClass.h
	include/script/class/impl/JsVec2.h
	include/script/class/impl/JsVec3.h
	include/script/class/impl/JsWorkerThread.h
	include/script/class/JsClass.h
	include/script/class/JsWrapperClass.h
	include/script/event/ScriptListener.h
	include/script/feature/JsEvented.h
	include/script/interop/classes/JsEntity.h
	include/script/interop/classes/JsTexture.h
	include/script/lib/libraries/Clipboard.h
	include/script/lib/libraries/Filesystem.h
	include/script/lib/libraries/Network.h
	include/script/lib/JsLibrary.h
	include/script/objects/ClientScriptingObject.h
	include/script/objects/D2DScriptingObject.h
	include/script/objects/GameScriptingObject.h
	include/script/objects/Graphics3DScriptingObject.h
	include/script/objects/OptionsScriptingObject.h
	include/script/objects/OSScriptingObject.h
	include/script/JsPlugin.h
	include/script/JsScript.h
	include/script/PluginManager.h
	include/script/ScriptingObject.h
	include/ui/TextBox.h
	include/Latite.h
)

target_include_directories(Latite.client PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>
)