add_library(Latite.sdk STATIC
	src/misc/ClickMap.cpp
	src/deps/application/AppPlatform.cpp
	src/common/world/Minecraft.cpp
	src/common/world/ItemStackBase.cpp
	src/common/world/level/LevelData.cpp
	src/common/world/level/Level.cpp
	src/common/world/actor/Actor.cpp
	src/common/world/actor/player/Player.cpp
	src/common/network/packet/TextPacket.cpp
	src/common/network/packet/SetScorePacket.cpp
	src/common/network/packet/CommandRequestPacket.cpp
	src/common/client/util/JpegCommentWriter.cpp
	src/common/client/renderer/Tessellator.cpp
	src/common/client/renderer/MeshUtils.cpp
	src/common/client/renderer/MaterialPtr.cpp
	src/common/client/renderer/game/LevelRendererPlayer.cpp
	src/common/client/renderer/game/BaseActorRenderContext.cpp
	src/common/client/input/RemappingLayout.cpp
	src/common/client/gui/screens/ContainerScreenController.cpp
	src/common/client/gui/controls/UIControl.cpp
	src/common/client/game/Options.cpp
	src/common/client/game/MinecraftGame.cpp
	src/common/client/game/ClientInstance.cpp

	include/Version.h
	include/Util.h
	include/String.h
	include/signature/storage.h
	include/signature/storage_latest.h
	include/signature/storage_1_20_40.h
	include/signature/storage_1_20_30.h
	include/signature/storage_1_19_51.h
	include/signature/storage_1_18_12.h
	include/signature/storage_1_16_40.h
	include/misc/ClickMap.h
	include/deps/core_graphics/ImageBuffer.h
	include/deps/core/StringUtils.h
	include/deps/application/AppPlatform.h
	include/common/world/Attribute.h
	include/common/world/ItemStack.h
	include/common/world/ItemStackBase.h
	include/common/world/Minecraft.h
	include/common/world/Timer.h
	include/common/world/Weather.h
	include/common/world/Item.h
	include/common/world/level/BlockSource.h
	include/common/world/level/LevelData.h
	include/common/world/level/Dimension.h
	include/common/world/level/HitResult.h
	include/common/world/level/Level.h
	include/common/world/level/block/BlockLegacy.h
	include/common/world/level/block/Block.h
	include/common/world/actor/player/GameMode.h
	include/common/world/actor/player/Inventory.h
	include/common/world/actor/player/Player.h
	include/common/world/actor/player/PlayerInventory.h
	include/common/world/actor/Actor.h
	include/common/world/actor/Mob.h
	include/common/util/BasicDataOutput.h
	include/common/util/BasicPrintStream.h
	include/common/util/MolangVariable.h
	include/common/util/MolangVariableMap.h
	include/common/server/ServerInstance.h
	include/common/network/packet/ActorEventPacket.h
	include/common/network/packet/CommandRequestPacket.h
	include/common/network/packet/ModalFormRequestPacket.h
	include/common/network/packet/SetScorePacket.h
	include/common/network/packet/SetTitlePacket.h
	include/common/network/packet/TextPacket.h
	include/common/network/MinecraftPackets.h
	include/common/network/Packet.h
	include/common/network/PacketSender.h
	include/common/network/RakNetConnector.h
	include/common/network/RakPeer.h
	include/common/nbt/Tag.h
	include/common/nbt/CompoundTag.h
	include/common/entity/component/ActorDataFlagComponent.h
	include/common/entity/component/ActorEquipmentComponent.h
	include/common/entity/component/ActorTypeComponent.h
	include/common/entity/component/AttributesComponent.h
	include/common/entity/component/MoveInputComponent.h
	include/common/entity/component/RuntimeIDComponent.h
	include/common/entity/EntityContext.h
	include/common/client/game/ClientInstance.h
	include/common/client/game/FontRepository.h
	include/common/client/game/MinecraftGame.h
	include/common/client/game/Option.h
	include/common/client/game/Options.h
	include/common/client/gui/controls/UIControl.h
	include/common/client/gui/controls/VisualTree.h
	include/common/client/gui/screens/ContainerScreenController.h
	include/common/client/gui/screens/ScreenController.h
	include/common/client/gui/Font.h
	include/common/client/gui/GuiData.h
	include/common/client/gui/ScreenView.h
	include/common/client/input/ClientInputHandler.h
	include/common/client/input/RemappingLayout.h
	include/common/client/player/LocalPlayer.h
	include/common/client/renderer/game/BaseActorRenderContext.h
	include/common/client/renderer/game/CameraComponent.h
	include/common/client/renderer/game/LevelRenderer.h
	include/common/client/renderer/game/LevelRendererPlayer.h
	include/common/client/renderer/screen/MinecraftUIRenderContext.h
	include/common/client/renderer/screen/ScreenContext.h
	include/common/client/renderer/HudPlayerRenderer.h
	include/common/client/renderer/ItemRenderer.h
	include/common/client/renderer/MaterialPtr.h
	include/common/client/renderer/MatrixStack.h
	include/common/client/renderer/MeshUtils.h
	include/common/client/renderer/Tessellator.h
	include/common/client/renderer/TexturePtr.h
	include/common/client/util/JpegCommentWriter.h
	include/common/client/win/winrt/HidControllerWinRT.h
)

target_include_directories(Latite.sdk PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>
)